fix(ellipsis): disable tap highlights on iOS

--- a/packages/varlet-ui/src/ellipsis/ellipsis.less
+++ b/packages/varlet-ui/src/ellipsis/ellipsis.less
@@ -2,6 +2,7 @@
   width: 100%;
   overflow: hidden;
   vertical-align: bottom;
+  -webkit-tap-highlight-color: transparent;
 
   &--clamp {
     display: -webkit-inline-box;
